<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.thirdassignmentandroid8.AddSubActivity"
    tools:showIn="@layout/activity_add_sub">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/btnAdd"
                android:id="@+id/butAdd"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/total_Num"
                android:id="@+id/text_total_num" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/btnSub"
                android:id="@+id/butSub"
                />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/get"
                android:id="@+id/butGet"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
